playing with angular

--- a/Application/training-news-checker/src/app/app.component.html
+++ b/Application/training-news-checker/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-header></app-header>
-<header>
-  <h1>Let's check the news today!</h1>
-  <p>Time to learn all about Angular!</p>
-</header>
+<app-header />
+
+<main>
+  <app-news-container />
+
+</main>
