--- a/Application/training-news-checker/src/app/header/header.component.html
+++ b/Application/training-news-checker/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <header>
   <div>
-    <h1>This is header</h1>
+    <h1>Let's check the news today!</h1>
+    <p>Time to learn all about Angular!</p>
   </div>
 </header>
